Add: Vincent: Twitter taught Microsoft’s AI chatbot to be a racist asshole in less than a day

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -70,6 +70,10 @@
         <a href="https://www.fastcompany.com/3055887/apple-maps-stops-sending-people-searching-for-abortion-to-adoption-centers">Apple Maps Stops Sending People Searching For “Abortion” To Adoption Centers</a>,
         <i class="website">Fast Company</i>, 28.01.2016.
       </li>
+      <li>Vincent, James:
+        <a href="https://www.theverge.com/2016/3/24/11297050/tay-microsoft-chatbot-racist">Twitter taught Microsoft’s <abbr>AI</abbr> chatbot to be a racist asshole in less than a day</a>,
+        <i class="website">The Verge</i>, 24.03.2016.
+      </li>
       <li>Angwin, Julia; Larson, Jeff; Mattu, Surya; Kirchner, Lauren:
         <a href="https://www.propublica.org/article/machine-bias-risk-assessments-in-criminal-sentencing">Machine Bias</a>,
         <i class="website">ProPublica</i>, 23.05.2016.
