Add: FutureLearn course Artificial Intelligence: Distinguishing Between Fact and Fiction

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -523,6 +523,12 @@
         an online degree by Coventry University that consists of eleven courses starting in September 2018.
       </li>
       <li>
+        <a href="https://www.futurelearn.com/courses/artificial-intelligence-fact-fiction">Artificial Intelligence: Distinguishing Between Fact and Fiction</a>:
+        an online course by Coventry University hosted on FutureLearn.
+        The course requires an estimated 3 hours of study per week over the course of two weeks.
+        The first run is scheduled to start on 20 January 2020.<!--@@update 2020 / https://www.futurelearn.com/courses/artificial-intelligence-fact-fiction/1/welcome-->
+      </li>
+      <li>
         <a href="https://www.futurelearn.com/courses/big-data-machine-learning">Big Data: Statistical Inference and Machine Learning</a>:
         online courses by Queensland University of Technology (<abbr>QUT</abbr>) hosted on FutureLearn.
         It is a three-week course that requires 2 hours of study per week.
@@ -606,7 +612,7 @@
         The course requires basic Python programming skills, mathematics knowledge (matrix vector operations)
         and basic machine learning knowledge (how to frame a machine learning problem).
       </li>
-      <!--Other machine learning couses on Coursera: https://www.coursera.org/browse/data-science/machine-learning -->
+      <!--Other machine learning courses on Coursera: https://www.coursera.org/browse/data-science/machine-learning -->
     </ul>
 
     <h3>Books Teaching Artificial Intelligence</h3>
