Add: Cameron: Religion isn't dead-it's just taken another life

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -550,6 +550,18 @@
         <i class="magazine">Prospect Magazine</i>, 29.11.2019.
         This article does not appear to make a distinction between faith, religion and wishful thinking.
       </li>
+      <li>Cameron, Averil:
+        <a href="https://www.prospectmagazine.co.uk/magazine/religion-isnt-dead-its-just-taken-on-another-life">Religion isn’t dead—it’s just taken on another life</a>,
+        <i class="magazine">Prospect Magazine</i>, 05.10.2019.
+        <br />This article discusses two books:
+        <i class="booktitle">Is Europe Christian?</i> by Olivier Roy (who previously also published <i class="booktitle">Globalised Islam</i>) and
+        <i class="booktitle">Dominion</i> by Tom Holland (who previously also published <i class="booktitle">In the Shadow of the Sword</i>).
+      </li>
+      <!--
+      <li> : <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
     </ul>
 
     <!--
