Add: Spencer: Atheists: The Origin of the Species

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -557,6 +557,10 @@
         <i class="booktitle">Is Europe Christian?</i> by Olivier Roy (who previously also published <i class="booktitle">Globalised Islam</i>) and
         <i class="booktitle">Dominion</i> by Tom Holland (who previously also published <i class="booktitle">In the Shadow of the Sword</i>).
       </li>
+      <li>Spencer, Nick:
+        <i class="booktitle">Atheists: The Origin of the Species</i>. Bloomsbury, 2014. (320 pages)
+        <a href="https://www.bloomsbury.com/uk/atheists-9781472902962/"><abbr>ISBN</abbr> 9781472902962</a>.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
