Add: Watson: The Age of Atheists: How We Have Sought to Live Since the Death of God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -561,6 +561,16 @@
         <i class="booktitle">Atheists: The Origin of the Species</i>. Bloomsbury, 2014. (320 pages)
         <a href="https://www.bloomsbury.com/uk/atheists-9781472902962/"><abbr>ISBN</abbr> 9781472902962</a>.
       </li>
+      <li>Watson, Peter:
+        <i class="booktitle">The Age of Atheists: How We Have Sought to Live Since the Death of God</i>. Simon and Schuster, 2014. (640 pages)
+        <a href="https://www.simonandschuster.com/books/The-Age-of-Atheists/Peter-Watson/9781476754321"><abbr>ISBN</abbr> 9781476754321</a>.
+        <br />See also
+        <a href="https://peterwatsonauthor.com/books/the-age-of-atheists/">How We Have Sought to Live Since the Death of God</a>
+        on the author's website.
+      </li>
+      <!--Review of the above two books:
+        Morten Høi Jensen: Atheism and Its Discontents. Los Angeles Review of Books, 14.12.2014: https://lareviewofbooks.org/article/atheism-discontents/
+      -->
       <!--
       <li> : <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
