Add class ytchannel

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1931,7 +1931,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=sKTmwu3ynOY">Naomi Klein on Global Neoliberalism</a>
-        (BigThink on YouTube, 14 minutes, 23.04.2012).
+        (<i class="ytchannel">BigThink</i> on YouTube, 14 minutes, 23.04.2012).
       </li>
       <li>The Intercept:
         <a href="https://www.youtube.com/watch?v=sTcELLklap4">Naomi Klein: How to Resist Trump's Shock Doctrine</a>
