Add: War Made Easy: How Presidents &amp; Pundits Keep Spinning Us to Death

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -749,6 +749,11 @@
         <i class="magazine">Reason</i>, 01.07.2019.
         <q>Firing Peter Boghossian for failing to get permission from the institutional review board would threaten academic freedom.</q>
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=XeXfV0tAxtE">Applied Postmodernism: How "Idea Laundering" is Crippling American Universities</a>,
+        <i class="ytchannel">GrassRoots Community Network</i>, 72 minutes, 08.08.2019.
+        <br />Recording of a debate with Peter Boghossian, James Lindsey and Helen Pluckrose.
+      </li>
     </ul>
 
     <h2>Miscellaneous Other Links</h2>
