--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2960,6 +2960,10 @@
         <i class="booktitle">War Made Easy: How Presidents and Pundits Keep Spinning Us to Death</i>. Hoboken, New Jersey: John Wiley &amp; Sons, 2005.
         <abbr>ISBN</abbr> 978-0471694793.
       </li>
+      <li>
+        <a href="https://www.democracynow.org/2007/5/29/war_made_easy_how_presidents_pundits">War Made Easy: How Presidents &amp; Pundits Keep Spinning Us to Death</a>,
+        <i class="website">Democracy Now!</i>, 29.05.2007.
+      </li>
       <!--
       <li>
         <a href=""></a>
