Add: King: Philosophy of Science. Including Technology, Cosmology, & Maths

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1005,6 +1005,10 @@
         <a href="https://global.oup.com/academic/product/the-rationality-of-induction-9780198247890"><abbr>ISBN</abbr> 9780198247890</a>.
         <br />See <a href="https://en.wikipedia.org/wiki/David_Stove">David Stove (Wikipedia)</a>.
       </li>
+      <li>King, Peter:
+        <a href="http://users.ox.ac.uk/~worc0337/phil_topics_sci.html">Philosophy of Science. Including Technology, Cosmology, &amp; Maths</a>.
+        This page is a link collection; possibly no updated since 2011.
+      </li>
       <!--li>Shermer, Michael: 
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
