Add: Shead: Chinese residents worry about rise of facial recognition

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1074,6 +1074,12 @@
         <a href="https://www.theguardian.com/society/2019/oct/15/councils-using-algorithms-make-welfare-decisions-benefits">One in three councils using algorithms to make welfare decisions</a>,
         <i class="newspaper">The Guardian</i>, 15.10.2019.
       </li>
+      <li>Shead, Sam:
+        <a href="https://www.bbc.com/news/technology-50674909">Chinese residents worry about rise of facial recognition</a>,
+        <i class="website"><abbr>BBC</abbr> News</i>, 05.12.2019.
+        <br /><q>A survey by a Beijing research institute indicates growing pushback against facial recognition in China.
+        Some 74% of respondents said they wanted the option to be able to use traditional <abbr>ID</abbr> methods over the tech to verify their identity.</q>
+      </li>
     </ul>
 
 
