Add: Solon: Facial recognition's 'dirty little secret': Millions of online photos scraped without consent

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -357,6 +357,21 @@
         <a href="https://www.siliconrepublic.com/enterprise/ai-ethics-military"><abbr>AI</abbr> ethics and the military: A tangled web</a>,
         <i class="website">Silicon Republic</i>, 19.02.2019.
       </li>
+      <li>Solon, Olivia:
+        <a href="https://www.nbcnews.com/tech/internet/facial-recognition-s-dirty-little-secret-millions-online-photos-scraped-n981921">Facial recognition's 'dirty little secret': Millions of online photos scraped without consent</a>,
+        <i class="website"><abbr>NBC</abbr> News</i>, 12.03.2019.
+        <br />This article discusses the photo collection practices of <abbr>IBM</abbr>,
+        <q>which in January released a collection of nearly a million photos that were taken from the photo hosting site Flickr and coded to describe the subjects’ appearance.
+        <abbr>IBM</abbr> promoted the collection to researchers as a progressive step toward reducing bias in facial recognition.</q>
+        <q>John Smith, who oversees <abbr>AI</abbr> research at <abbr>IBM</abbr>, said that the company was committed to “protecting the privacy of individuals” and “will work with anyone who requests a URL to be removed from the dataset.”</q>
+        (In other words, <abbr>IBM</abbr> thinks that making their use of the photos an opt-out process instead of an opt-in process is sufficient &ldquo;ethical&rdquo;.)
+        The articles goes on to say,
+        <q>Despite <abbr>IBM</abbr>’s assurances that Flickr users can opt out of the database, NBC News discovered that it’s almost impossible to get photos removed.
+        <abbr>IBM</abbr> requires photographers to email links to photos they want removed, but the company has not publicly shared the list of Flickr users and photos included in the dataset, so there is no easy way of finding out whose photos are included.
+        <abbr>IBM</abbr> did not respond to questions about this process.</q>
+        The journalist also talked with Woody Hartzog, a professor of law and computer science at Northeastern University, who said
+        <q>Facial recognition can be incredibly harmful when it’s inaccurate and incredibly oppressive the more accurate it gets.</q>
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
