Add: Baker: Is Bias Baked Into AI?

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -175,6 +175,15 @@
         <a href="https://www.technologyreview.com/s/613320/ais-white-guy-problem-isnt-going-away/"><abbr>AI</abbr>’s white guy problem isn’t going away</a>,
         <i class="magazine"><abbr>MIT</abbr> Technology Review</i>, 17.04.2019.
       </li>
+      <li>Baker, John:
+        <a href="https://www.d2l.com/blog/learning2030-is-bias-baked-into-ai/">Is Bias Baked Into <abbr>IA</abbr>?</a>
+        <i class="blog"><abbr title="Desire2Learn">D2L</abbr> blog</i>, 25.11.2019.
+        <br />The author spoke with Jutta Treviranus, who tested several learning models for directing traffic to see what they would do in a specific unexpected scenario,
+        namely a wheelchair going backward over a crossing:
+        <blockquote>“I tested six learning models, all of which initially decided to keep driving through the intersection—which people thought was a reflection of the model not having enough data.
+        After researchers exposed the <abbr>AI</abbr> to more data, the result was in fact dramatically different: the AI decided to run the person over, but with much greater confidence.</blockquote>
+        <!--Referrer: https://twitter.com/CarineMarzin/status/1199760410783731712 -->
+      </li>
       <!--
       <li>
         <a href=""></a>
