Add: Boran: ‘Short window’ to stop AI taking control of society, warns ex-Google employee

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -381,6 +381,21 @@
         The journalist also talked with Woody Hartzog, a professor of law and computer science at Northeastern University, who said
         <q>Facial recognition can be incredibly harmful when it’s inaccurate and incredibly oppressive the more accurate it gets.</q>
       </li>
+      <li>Boran, Marie:
+        <a href="https://www.irishtimes.com/business/technology/short-window-to-stop-ai-taking-control-of-society-warns-ex-google-employee-1.4104535">‘Short window’ to stop <abbr>AI</abbr> taking control of society, warns ex-Google employee</a>,
+        <i class="newspaper">Irish Times</i>, 05.12.2019.
+        <br />Meredith Whittaker, one of the original organisers of Google Walkout for Real Change, gives the following warning:
+        <q>What’s frightening about <abbr>AI</abbr> isn’t terminators and super intelligent machines:
+        it’s the way <abbr>AI</abbr> works to centralise knowledge and power in the hands of those who already have it and further disempower those who don’t.</q>
+        She also points out that ImageNet, a dataset used for image classification,
+        <q>consists of over 15 million images scraped from Flickr and the web without consent, then labelled by low-paid Amazon Mechanical Turk workers</q>.
+        Another issue is the dominance of three <abbr>US</abbr>-based companies in the infrastructure domain:
+        <q>Ask any <abbr>AI</abbr> start-up and they will tell you they rent their computational infrastructure from one of the Big Three tech companies – Amazon, Microsoft or Google, in that order.
+        They’re often at a loss for where to get their own data, so from this perspective, we can understand the popular commodification of internet technologies that began in the 1990s as creating the conditions for the <abbr>AI</abbr> of today.</q>
+        The concentration of datasets and infrastructure has created a power bias:
+        <q>Only five or so companies in the West have the resources to develop this technology at scale, which means that we cannot talk about <abbr>AI</abbr> without confronting issues of power.
+        And frankly, we cannot talk about <abbr>AI</abbr> without talking about neoliberal capitalism: these systems are already being quietly integrated throughout our social institutions and we’re seeing the costs.</q>
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
