Add: Butler: War Is a Racket

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2964,6 +2964,16 @@
         <a href="https://www.democracynow.org/2007/5/29/war_made_easy_how_presidents_pundits">War Made Easy: How Presidents &amp; Pundits Keep Spinning Us to Death</a>,
         <i class="website">Democracy Now!</i>, 29.05.2007.
       </li>
+      <li>Butler, Smedley R.:
+        <a href="https://en.wikipedia.org/wiki/War_Is_a_Racket"><i class="booktitle">War Is a Racket</i></a>:
+        Wikipedia article about a speech and book that the retired Major General Smedley D. Butler gave in 1935.
+        See also
+        <a href="http://feralhouse.com/war-is-a-racket/">War Is a Racket: The Anti-War Classic by America’s Most Decorated General</i></a>
+        on the website of publisher Feral House (<abbr>ISBN</abbr> 0922915865) and
+        <a href="https://www.youtube.com/watch?v=UC3lHVnZAkI">War Is A Racket</a>
+        on The Jimmy Dore Show (YouTube, 6 minutes, 14.09.2014).
+        <!--@@On Archive.org: https://archive.org/details/WarIsARacket -->
+      </li>
       <!--
       <li>
         <a href=""></a>
