Add: Fox: How to be Reasonable (By Someone Who Tried Everything Else)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -580,6 +580,14 @@
         <q>Eight hundred and fifty people answered thirty-six in-depth questions about their process of letting go of their faith beliefs.
         Their answers provide useful data for atheist advocacy, but it’s not just data: the honest, moving and often darkly humorous comments inspire artistic and philosophical exploration.</q>
       </li>
+      <li>Fox, Rebecca:
+        <i class="booktitle">How to be Reasonable (By Someone Who Tried Everything Else)</i>.
+        <a href="http://www.hypatiapress.org/Books.php#I00506c0f278b4d3d9fa0682a52c4e7c6_sys_txt">Hypatria Press</a>, 2017.
+        <br />According to the publisher's description, this grapic novel is a
+        <q>quirky, smart comic which introduces an essential set of critical thinking skills that even the most reasonable reader will benefit from</q>.
+        See also
+        <a href="https://rebeccaonpaper.com/how-to-be-reasonable"><i class="booktitle">How to be Reasonable</i> on the author's website</a>.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
