Add: Bollwerk & Opitz: Pro und Contra Kirchenaustritt

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -582,11 +582,23 @@
       </li>
       <li>Fox, Rebecca:
         <i class="booktitle">How to be Reasonable (By Someone Who Tried Everything Else)</i>.
-        <a href="http://www.hypatiapress.org/Books.php#I00506c0f278b4d3d9fa0682a52c4e7c6_sys_txt">Hypatria Press</a>, 2017.
+        <a href="http://www.hypatiapress.org/Books.php#I00506c0f278b4d3d9fa0682a52c4e7c6_sys_txt">Hypatia Press</a>, 2017.
         <br />According to the publisher's description, this grapic novel is a
         <q>quirky, smart comic which introduces an essential set of critical thinking skills that even the most reasonable reader will benefit from</q>.
         See also
         <a href="https://rebeccaonpaper.com/how-to-be-reasonable"><i class="booktitle">How to be Reasonable</i> on the author's website</a>.
+      </li>
+      <li><span lang="de">Bollwerk, Jan; Opitz, Tobias:
+        <i class="booktitle">Pro und Contra Kirchenaustritt</i>. Niederhausen: Falken-Verlag</span>, 1995.
+        <abbr>ISBN</abbr> 3 635 60029 6.
+        <br />This book discusses the arguments for and against leaving the church in Germany.
+        According to the authors, the increase in the number of church leavers is connected with
+        more general social trend towards individidualism and consumerism and away from social commitment and volunteer work.
+        The authors use the term &ldquo;<span lang="de">Glaubensverlust</span>&rdquo; (loss of faith), putting the phenomenon in a negative light;
+        they avoid terms such as atheism and humanism, and it does not to them to ethics and commitment may also exist outside the context of religion.
+        The cite a study by <span lang="de">Horst Opaschowski</span>, who states that to replace the culture of invidividualism with a community spirit
+        <q lang="">braucht weder eine neue Ethik der Nächstenliebe gepredigt noch eine „Wiederbelebung von Gewissen“ (Ehrenreich) propagiert zu werden.
+        Es genügt die Wiederentdeckung des Gemeinsinns, der sich der <i>Verantwortung für die nachwachsende Generation</i> nicht enzieht.</q>
       </li>
       <!--
       <li> : <i class="booktitle"></i>.
