Add: Shane: The danger of AI is weirder than you think

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1143,6 +1143,15 @@
         <a href="https://www.theguardian.com/society/2019/oct/15/councils-using-algorithms-make-welfare-decisions-benefits">One in three councils using algorithms to make welfare decisions</a>,
         <i class="newspaper">The Guardian</i>, 15.10.2019.
       </li>
+      <li>Shane, Janelle:
+        <a href="https://www.youtube.com/watch?v=OhCzX0iLnOc">The danger of <abbr>AI</abbr> is weirder than you think</a>
+        (<i class="ytchannel"><abbr>TED</abbr></i> on YouTube, 10 minutes, 13.11.2019.
+        <br />Summary provided by <abbr>TED</abbr>:
+        <blockquote lang="en-US">The danger of artificial intelligence isn't that it's going to rebel against us, but that it's going to do exactly what we ask it to do, says <abbr>AI</abbr> researcher Janelle Shane.
+        Sharing the weird, sometimes alarming antics of <abbr>AI</abbr> algorithms as they try to solve human problems &mdash; like creating new ice cream flavors or recognizing cars on the road &mdash; Shane shows why <abbr>AI</abbr> doesn't yet measure up to real brains.</blockquote>
+        The weird problems she talks about are the result of the <abbr>AI</abbr>'s lack of understanding of the world and hence of the tasks it is given.
+        It is essential to clearly define the constraints of each problem that we want machine learning algorithms to solve.
+      </li>
       <li>Shead, Sam:
         <a href="https://www.bbc.com/news/technology-50674909">Chinese residents worry about rise of facial recognition</a>,
         <i class="website"><abbr>BBC</abbr> News</i>, 05.12.2019.
