--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -570,6 +570,10 @@
         <i class="booktitle">The Palgrave Handbook of Mimetic Theory and Religion</i>. Palgrave Macmillan, 2017. (549 pages)
         <a href="https://www.palgrave.com/de/book/9781137552808"><abbr>ISBN</abbr> 978-1-137-55280-8</a>.
       </li>
+      <li>bi, Johnathan:
+        <a href="https://medium.com/@bi.johnathan/book-analysis-things-hidden-since-the-foundations-of-the-world-8e66dc71c0b7">Book Summary: Things Hidden Since the Foundations of the World — Rene Girard</a>,
+        <i class="blog">Medium</i>, 28.02.2019 (133-minute read).
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
