Add: Did You Know Podcast: Rene Girard’s Mimetic Theory

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -574,6 +574,11 @@
         <a href="https://medium.com/@bi.johnathan/book-analysis-things-hidden-since-the-foundations-of-the-world-8e66dc71c0b7">Book Summary: Things Hidden Since the Foundations of the World — Rene Girard</a>,
         <i class="blog">Medium</i>, 28.02.2019 (133-minute read).
       </li>
+      <li>
+        <a href="https://didyouknowcrypto.com/ep61/">Rene Girard’s Mimetic Theory</a>,
+        <i class="website">Did You Know Podcast</i>, 24.11.2019 (episode 61).
+        <br />A two-hour podcast with David Gornoski.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
