Add: Haven: René Girard and the Present Moment

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1090,6 +1090,16 @@
         <a href="http://jamesalison.co.uk/">James Alison. Theology</a>:
         website of the British Catholic theologian, who has published a lot about René Girard.
       </li>
+      <li>Haven, Cynthia L.:
+        <a href="https://churchlifejournal.nd.edu/articles/rene-girard-and-the-present-moment/">René Girard and the Present Moment</a>,
+        <i class="magazine">Church Life Journal</i>, 05.12.2019.
+        <br />Quote
+        <blockquote>Girard was meeting with theologians in Sonoma, sometime in the mid to late 1980’s.
+          He had just outlined the implication of our cultural and historical predicament—how our mimetic crisis has led to escalating violence and conflict,
+          with neither scapegoats or peace efforts able to resolve it.“What is to be done?” someone asked.
+          Girard’s response was all the more shocking for needing to be said at all in a roomful of theologians: “We might begin with personal sanctity.”
+        </blockquote>
+      </li>
     </ul>
     <!--
       * Retzer, Maike (2007): Mythische Strukturen in Wolframs von Eschenbach `Parzival´. Dissertation, LMU München: Faculty for Languages and Literatures : https://edoc.ub.uni-muenchen.de/7746/
