Add: René Girard: Why Do We Fight? How Do We Stop?

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1100,6 +1100,10 @@
           Girard’s response was all the more shocking for needing to be said at all in a roomful of theologians: “We might begin with personal sanctity.”
         </blockquote>
       </li>
+      <li>
+        <a href="https://lareviewofbooks.org/entitled-opinions/rene-girard-fight-stop/">René Girard: Why Do We Fight? How Do We Stop?</a>
+        <i class="magazine"><abbr>LA</abbr> Review of Books</i>, 27.12.2018.
+      </li>
     </ul>
     <!--
       * Retzer, Maike (2007): Mythische Strukturen in Wolframs von Eschenbach `Parzival´. Dissertation, LMU München: Faculty for Languages and Literatures : https://edoc.ub.uni-muenchen.de/7746/
