--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1104,6 +1104,10 @@
         <a href="https://lareviewofbooks.org/entitled-opinions/rene-girard-fight-stop/">René Girard: Why Do We Fight? How Do We Stop?</a>
         <i class="magazine"><abbr>LA</abbr> Review of Books</i>, 27.12.2018.
       </li>
+      <li><span lang="fr">Rebeihi, Ali:
+        <a href="https://www.franceinter.fr/emissions/grand-bien-vous-fasse/grand-bien-vous-fasse-06-decembre-2019" hreflang="fr">Qu'est-ce qui nous empêche de nous mettre à la place des autres ?</a>
+        <i class="website">France Inter</i></span>, 06.12.2019.
+      </li>
     </ul>
     <!--
       * Retzer, Maike (2007): Mythische Strukturen in Wolframs von Eschenbach `Parzival´. Dissertation, LMU München: Faculty for Languages and Literatures : https://edoc.ub.uni-muenchen.de/7746/
