Add: Burton: The Psychology of Scapegoating

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1108,6 +1108,11 @@
         <a href="https://www.franceinter.fr/emissions/grand-bien-vous-fasse/grand-bien-vous-fasse-06-decembre-2019" hreflang="fr">Qu'est-ce qui nous empêche de nous mettre à la place des autres ?</a>
         <i class="website">France Inter</i></span>, 06.12.2019.
       </li>
+      <li>Burton, Neel:
+        <a href="https://www.psychologytoday.com/us/blog/hide-and-seek/201312/the-psychology-scapegoating">The Psychology of Scapegoating</a>,
+        <i class="blog">Psychology Today blog</i>, 21.12.2013, updated 24.12.2018.
+        (This article is not primarily about René Girard but mentions him.)
+      </li>
     </ul>
     <!--
       * Retzer, Maike (2007): Mythische Strukturen in Wolframs von Eschenbach `Parzival´. Dissertation, LMU München: Faculty for Languages and Literatures : https://edoc.ub.uni-muenchen.de/7746/
