Add: Gros: René Girard And Why We Need To Edit Our Work

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1113,6 +1113,10 @@
         <i class="blog">Psychology Today blog</i>, 21.12.2013, updated 24.12.2018.
         (This article is not primarily about René Girard but mentions him.)
       </li>
+      <li>Gros, Fernando:
+        <a href="https://fernandogros.com/rene-girard-need-edit-work/">René Girard And Why We Need To Edit Our Work</a>,
+        <i class="blog">Fernando Gros</i>, 21.02.2018.
+      </li>
     </ul>
     <!--
       * Retzer, Maike (2007): Mythische Strukturen in Wolframs von Eschenbach `Parzival´. Dissertation, LMU München: Faculty for Languages and Literatures : https://edoc.ub.uni-muenchen.de/7746/
