Update: video recordings now archived for only 6 months

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -59,7 +59,7 @@
       organises a &ldquo;science day&rdquo;. This is an event where researches present
       topics that are not part of the regular curriculum at the university.
       The presentations can also be viewed through a live video stream;
-      the video recordings are then archived.
+      the video recordings are then archived for six months.
     </p>
 
     <p>Below is a list of the web pages where the archived videos can be found.</p>
