Add: Perret: Dalla caccia alle streghe al Crocifisso

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1117,6 +1117,10 @@
         <a href="https://fernandogros.com/rene-girard-need-edit-work/">René Girard And Why We Need To Edit Our Work</a>,
         <i class="blog">Fernando Gros</i>, 21.02.2018.
       </li>
+      <li>Perret, Bernard:
+        <a href="https://www.oasiscenter.eu/it/dalla-caccia-alle-streghe-al-crocifisso" hreflang="it" lang="it">Dalla caccia alle streghe al Crocifisso</a>,
+        <i class="website">Oasis</i>, 28.01.2015.
+      </li>
     </ul>
     <!--
       * Retzer, Maike (2007): Mythische Strukturen in Wolframs von Eschenbach `Parzival´. Dissertation, LMU München: Faculty for Languages and Literatures : https://edoc.ub.uni-muenchen.de/7746/
