Add: Donnadieu: La violence dévoiléé. Pour comprendre René Girard

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -623,6 +623,10 @@
         on Paul Nuechterlein's Girardian Lectionary website.
         <!--See also http://stmaryvalleybloom.org/violence.html -->
       </li>
+      <li><span lang="fr">Donnadieu, Gérard:
+        <i class="booktitle">La violence dévoiléé. Pour comprendre René Girard</i>. Saint-Léger Production</span>s, 2017.
+        <a href="http://saintlegerproductions.fr/Livres/La-violence-devoilee/La-violence-devoilee.html"><abbr>ISBN</abbr> 978236452930</a>.
+      </li>
       <li lang="fr">Dormoy, Nadine:
         <i class="booktitle">L’univers de René Girard - Entretiens</i>. Orizons, novembre 2018. (234 pages)
         <a href="http://editionsorizons.fr/index.php/l-univers-de-rene-girard-entretiens.html" hreflang="fr"><abbr>ISBN</abbr> 979-10-309-0174-0</a>.
@@ -714,7 +718,7 @@
         <br />See also
         <a href="https://www.franceculture.fr/conferences/ecole-nationale-des-chartes/le-sacrifice-laube-de-la-sedentarisation-rene-girard-et-le" hreflang="fr" lang="fr">Le sacrifice à l’aube de la sédentarisation. René Girard et le site néolithique de Çatalhöyük (France Culture)</a>
         (24.02.2016).
-        <!-- See also "Chronology of the Neolithic period": https://en.wikipedia.org/wiki/%C3%87atalh%C3%B6y%C3%BCk#Chronology -->
+        <!--See also "Chronology of the Neolithic period": https://en.wikipedia.org/wiki/%C3%87atalh%C3%B6y%C3%BCk#Chronology -->
       </li>
       <li><span lang="es">Moreno Fernández, Agustín:
         <a href="http://www.gazeta-antropologia.es/?p=4455" hreflang="es">La teoría mimética de René Girard. Una visión crítica</a>,
@@ -730,10 +734,10 @@
         <a href=""><abbr>ISBN</abbr> </a>. 
       </li>
       -->
-      <!-- Wolfgang Palaver: https://uibk.academia.edu/WolfgangPalaver & https://de.wikipedia.org/wiki/Wolfgang_Palaver -->
+      <!--Wolfgang Palaver: https://uibk.academia.edu/WolfgangPalaver & https://de.wikipedia.org/wiki/Wolfgang_Palaver -->
     </ul>
 
-    <!-- 
+    <!--
       Michel Deguy & Jean-Pierre Dupuy, eds.: René Girard et le problème du mal. Grasset, 1982. ISBN 9782246249719. http://www.grasset.fr/rene-girard-et-le-probleme-du-mal-9782246249719 
         Collection of essays; also contains biography & bibliography of René Girard.
       Paul Dumouchel, ed.: Colloque de Cerisy: Violence et vérité - Autour de René Girard. Grasset, 1985. ISBN 9782246337218. http://www.grasset.fr/violence-et-verite-autour-de-rene-girard-9782246337218 
