Add: Hillion: Shakespeare et son double

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -653,6 +653,10 @@
         <i class="booktitle">Mimesis and Science: Empirical Research on Imitation and the Mimetic Theory of Culture and Religion</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2011. (272 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3C40"><abbr>ISBN</abbr> 9781611860238</a>.
       </li>
+      <li><span lang="fr">Hillion, Joël:
+        <i class="booktitle">Shakespeare et son double. Les sonnets de Shakespeare à la lumière de la théorie mimétique de René Girard</i>. L'Hermattan</span>, 2011. (256 pages)
+        <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=35865"><abbr>ISBN</abbr> 978-2-296-55950-9</a>.
+      </li>
       <li>Merrill, Trevor Cribben:
         <i class="booktitle">The Book of Imitation and Desire: Reading Milan Kundera with Rene Girard </i>. Bloomsbury, 2013 (2014: paperback). (208 pages)
         <a href="https://www.bloomsbury.com/uk/the-book-of-imitation-and-desire-reading-milan-kundera-with-rene-girard-9781628925234/"><abbr>ISBN</abbr> 9781628925234</a>.
