Add: Vinolo: René Girard : du mimétisme à l'hominisation

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -733,6 +733,10 @@
         <a href="http://www.gazeta-antropologia.es/?p=4455" hreflang="es">La teoría mimética de René Girard. Una visión crítica</a>,
         <i class="journal">Gazeta de Antropología</i></span>, 30.1 (2014).
       </li>
+      <li lang="fr">Vinolo, Stéphane:
+        <i class="booktitle">René Girard&nbsp;: du mimétisme à l'hominisation&nbsp;: La violence différante</i>. L'Hermattan, 2006.
+        <a href="https://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=20519"><abbr>ISBN</abbr> 2-7475-9047-X</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
