Add: Mäder & Schnurr: Wissenschaft und Gesellschaft: Ein vetrauensvoller Dialog

--- a/science/index.html
+++ b/science/index.html
@@ -1427,6 +1427,12 @@
         (08.06.2019).
         <!--@@PDF-->
       </li>
+      <li><span lang="de">Mäder, Alexander; Schnurr, Johannes (<abbr>Hrsg.</abbr>):
+        <i class="booktitle">Wissenschaft und Gesellschaft: Ein vetrauensvoller Dialog</i>. Springer</span>, 2020. (295 pages)
+        <a href="https://www.springer.com/de/book/9783662594650"><abbr>ISBN</abbr> 978-3-662-59466-7</a>.
+        <br />This is an Open Access book. See also
+        <a href="https://www.hdm-stuttgart.de/view_news?ident=news20191216150232" lang="de" hreflang="de">Wissenschaft und Gesellschaft: Ein vetrauensvoller Dialog (<abbr title="Hochschule der Medien">HdM</abbr>)</a>.
+      </li>
       <!--@@science communication:-->
       <li>de Melo-Martín, Inmaculada; Intemann, Kristen:
         <i class="booktitle">The Fight Against Doubt: How to Bridge the Gap Between Scientists and the Public</i>. Oxford University Press, 2018. (232 pages)
