Add: Institutionen in primitiven Gesellschaften (1968)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -597,8 +597,15 @@
         The authors use the term &ldquo;<span lang="de">Glaubensverlust</span>&rdquo; (loss of faith), putting the phenomenon in a negative light;
         they avoid terms such as atheism and humanism, and it does not to them to ethics and commitment may also exist outside the context of religion.
         The cite a study by <span lang="de">Horst Opaschowski</span>, who states that to replace the culture of invidividualism with a community spirit
-        <q lang="">braucht weder eine neue Ethik der Nächstenliebe gepredigt noch eine „Wiederbelebung von Gewissen“ (Ehrenreich) propagiert zu werden.
+        <q lang="de">braucht weder eine neue Ethik der Nächstenliebe gepredigt noch eine „Wiederbelebung von Gewissen“ (Ehrenreich) propagiert zu werden.
         Es genügt die Wiederentdeckung des Gemeinsinns, der sich der <i>Verantwortung für die nachwachsende Generation</i> nicht enzieht.</q>
+      </li>
+      <li><span lang="de"><i class="booktitle">Institutionen in primitiven Gesellschaften</i>.
+        Übersetzt von Michael Bärmann. 2. Auflage. Frankfurt am Main: Suhrkamp,</span> 1968. (119 pages)
+        <!--@@No ISBN: <a href=""><abbr>ISBN</abbr> </a>. -->
+        <br />This is a translation of <i class="booktitle">The Institutions of Primitive Society</i> (Basil Blackwell &amp; Mott, 1956),
+        a collection of lectures by Raymond William Firth, Edward E. Evans-Pritchard, Edmund Ronald Leach,
+        J. G. Peristiany, John Laynard, Max Gluckman, Meyer Fortes and Godfrey Lienhardt.
       </li>
       <!--
       <li> : <i class="booktitle"></i>.
