Add: Kreiß: Geschenk mit Haken – Facebooks Ethik-Institut an der TU München

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -423,6 +423,11 @@
         <q>Only five or so companies in the West have the resources to develop this technology at scale, which means that we cannot talk about <abbr>AI</abbr> without confronting issues of power.
         And frankly, we cannot talk about <abbr>AI</abbr> without talking about neoliberal capitalism: these systems are already being quietly integrated throughout our social institutions and we’re seeing the costs.</q>
       </li>
+      <li><span lang="de">Kreiß, Christian</span>:
+        <a href="https://background.tagesspiegel.de/digitalisierung/geschenk-mit-haken-facebooks-ethik-institut-an-der-tu-muenchen">Geschenk mit Haken – Facebooks Ethik-Institut an der <abbr>TU</abbr> München</a>,
+        <i class="newspaper">Tagesspiegel Background</i></li>, 18.12.2019.
+        <br /><q lang="de">Falls die Forschung oder die veröffentlichten Ergebnisse nicht im Sinne von Facebook verlaufen, können die Mittel jederzeit nach Belieben gestoppt werden.</q>.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
