Add: Ivancsics, Hansen: Actually, it’s about Ethics, AI, and Journalism: Reporting on and with Computation and Data

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1157,6 +1157,10 @@
         The weird problems she talks about are the result of the <abbr>AI</abbr>'s lack of understanding of the world and hence of the tasks it is given.
         It is essential to clearly define the constraints of each problem that we want machine learning algorithms to solve.
       </li>
+      <li>Ivancsics, Bernat; Hansen, Mark:
+        <a href="https://www.cjr.org/tow_center_reports/ai-ethics-journalism-and-computation-ibm-new-york-times.php">Actually, it’s about Ethics, AI, and Journalism: Reporting on and with Computation and Data</a>,
+        <i class="website">Columbia Journalism Review (<abbr>CJR</abbr>)</i>, 21.11.2019.
+      </li>
       <li>Shead, Sam:
         <a href="https://www.bbc.com/news/technology-50674909">Chinese residents worry about rise of facial recognition</a>,
         <i class="website"><abbr>BBC</abbr> News</i>, 05.12.2019.
